WP-8679 fixing grid alignment on the homepage

--- a/css/style.css
+++ b/css/style.css
@@ -8985,7 +8985,7 @@ input.signup-submit:hover {
 }
 @media (min-width: 75em) {
   #md-megamenu-1 .awemenu .awemenu-megamenu-wrapper .row {
-    padding-left: 40px;
+    padding-left: 15px;
     width: 1170px;
   }
 }
