--- a/sass/conditionals/news/homepage-articles-across.sass
+++ b/sass/conditionals/news/homepage-articles-across.sass
@@ -12,7 +12,8 @@
   .pane-gsb-announcement-school-listing-panel-pane-1,
   .pane-gsb-insights-stanford-business-panel-pane-1
     margin: 0 auto
-    width: 1172px
+    padding: 0 115px 0 150px
+    width: 100%
     +breakpoint(320px $max-width)
       clear: both
       margin: 0
