--- a/sass/conditionals/voices-listing.sass
+++ b/sass/conditionals/voices-listing.sass
@@ -122,7 +122,7 @@
 .pane-voices-filters-voices-list-cta-panel-pane,
 .view-gsb-voices-listing.view-id-gsb_voices_listing,
 .pane-gsb-voices-listing-panel-pane-1
-  padding: 0px 0px 0px 40px
+  padding-left: 35px
   .pane-title
     padding: 10px 0px 20px 0px
     color: $text-black
@@ -146,7 +146,7 @@
 // Home page 3 across custom styles
 .pane-gsb-voices-listing-panel-pane-1
   margin: 0 auto
-  width: 1272px
+  width: 85%
   +breakpoint($bp-for-phone-tablet-range)
     width: auto
     h2
