--- a/sass/partials/design/_md-megamenu-main.sass
+++ b/sass/partials/design/_md-megamenu-main.sass
@@ -346,7 +346,7 @@ div#header-wrapper.awemenu-sticky + div#hero
       .row
         margin: 0 auto
         +breakpoint($bp-for-desktop-up)
-          padding-left: 40px
+          padding-left: 15px
           width: 1170px
         .menu
           li
